--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": "9.3.0",
+    "npm": "3.10.3"
+  }
 }
