--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.2.0"
+  },
+  "engines": {
+    "node": "9.3.0",
+    "npm": "3.10.10"
   }
 }
