--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build-win": "webpack -p --config webpack.prod.config.js",
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "start-win": "node .\\node_modules\\webpack-dev-server\\bin\\webpack-dev-server.js",
-    "tslint": "./node_modules/tslint/bin/tslint 'src/**/*.ts?(x)' '**/*Test.ts?(x)'",
+    "tslint": "./node_modules/tslint/bin/tslint 'src*/**/*.ts?(x)' 'test*/**/*est.ts?(x)'",
     "webpack": "NODE_ENV=production webpack -p --config webpack.prod.config.js",
     "build-watch": "webpack --watch --config webpack.config.js",
     "check-updates": "npm outdated",
     "compile": "tsc",
-    "test": "npm run compile && npm run tslint && npx jest",
+    "test": "npm run tslint && npx jest",
     "test-watch": "jest --watch"
   },
   "devDependencies": {
@@ -36,8 +36,11 @@
     "isdev": "1.0.1",
     "jest": "23.6.0",
     "must": "0.13.4",
+    "node-sass": "^4.11.0",
     "react-hot-loader": "4.7.2",
     "react-test-renderer": "16.8.3",
+    "sass": "*",
+    "sass-loader": "^7.1.0",
     "sinon": "7.2.7",
     "style-loader": "^0.23.1",
     "ts-jest": "22.0.4",
@@ -48,13 +51,11 @@
     "typescript": "3.3.3333",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.2.1",
-    "sass-loader": "*",
-    "sass": "*"
+    "webpack-dev-server": "3.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "nanoajax": "0.4.3",
-    "node-sass": "^4.11.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-redux": "6.0.1",
@@ -62,7 +63,8 @@
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "ts-node": "8.0.3"
   },
   "engines": {
     "node": "9.3.0",
